--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
     <title>Sir Ghous Ahmed</title>
 </head>
 <body>
+<!--     <select  onchange="select()" id="class">
+   <option value="">Select Class</option>
+  </select>
+  <select  id="child">
+   <option value="">Select Child</option>
+  </select> -->
     
     <script src="./app.js"></script>
 </body>
